<resources>
    <string name="app_name">Free VPN</string>
    <string name="action_settings">Settings</string>
    <string name="server_btn_connect">Connect</string>
    <string name="server_btn_disconnect">Disconnect</string>
    <string name="server_txt_ping">Ping:</string>
    <string name="server_txt_sessions">Sessions:</string>
    <string name="server_txt_speed">Speed:</string>
    <string name="server_txt_city">City:</string>
    <string name="server_error_loading_profile">Error loading profile</string>
    <string name="server_txt_status">Status connection:</string>
    <string name="server_not_connected">Not connected</string>
    <string name="server_list_more">Details</string>
    <string name="mbps">Mbps</string>
    <string name="ms">ms</string>
    <string name="loading_text">Just a moment...</string>
    <string name="downloading_csv_text">Adding Security Layer</string>
    <string name="parsing_csv_text">Applying Security Layer</string>
    <string name="csv_file_error">Problem with a file reading</string>
    <string name="csv_file_error_parsing">Problem with a file parsing</string>
    <string name="network_error">Network error</string>
    <string name="successfully_loaded">Just ready to go</string>
    <string name="action_about">About</string>
    <string name="action_refresh">Refresh servers list</string>
    <string name="action_share">Share</string>
    <string name="ok">Ok</string>
    <string name="network_error_message">Internet is not available, reconnect network and try again.</string>
    <string name="action_current_connection">Current connection</string>
    <string name="random_connection">Quick connection</string>
    <string name="total_servers">%1$d servers available in the local database now</string>
    <string name="loading_additional_servers">The loading of additional servers</string>
    <string name="current_servers_list">Current servers list</string>
    <string name="you_have_servers"><b>You have servers:</b></string>
    <string name="info_basic">%1$d basic</string>
    <string name="info_additional">%1$d additional</string>
    <string name="connect_on_start">Automatically connect on start</string>
    <string name="connect_on_start_summary">Automatically connect to a random server after the app is started.</string>
    <string name="choose_country_priority">Choose your country of priority</string>
    <string name="choose_country_priority_summary">If not enabled then use random connection</string>
    <string name="choose_country">Choose country</string>
    <string name="error_random_country">Server with priority country %1$s is not available</string>
    <string name="automatic_switching">Switch to another server automatically</string>
    <string name="automatic_switching_category">Automatic switching</string>
    <string name="automatic_switching_set_seconds">Set connection pause seconds</string>
    <string name="automatic_switching_summary">Switching the server automatically to the same country after a connection takes too long time
    </string>
    <string name="choose_country_priority_category">Country priority</string>
    <string name="connect_on_start_category">Start on boot</string>
    <string name="try_another_server_text">Do you want try another server?</string>
    <string name="try_another_server_ok">Yes</string>
    <string name="try_another_server_no">No</string>
    <string name="traffic_in">Downloaded: %1$s</string>
    <string name="traffic_out">Uploaded: %1$s</string>
    <string name="traffic_totally"><b>Totally through the application</b></string>
    <string name="rating_title"><b>Thanks for using SmartVPN Free!</b></string>
    <string name="rating_sure">Sure</string>
    <string name="rating_not">Not really</string>


    <string name="bookmarks">Bookmarks</string>
    <string name="bookmark_delete">Delete</string>
    <string name="note_title"><b>Note</b></string>
    <string name="note_text">The servers here are from VPN GATE and are by the volunteers across the globe. We do not take responsibility for any data breach.</string>
    <string name="note_link">\nYou can provide your own computer as a VPN server to join this experiment.</string>
    <string name="connect">Connect</string>
    <string name="connection_status">Connection Status</string>
    <string name="data_usage_througn_the_application">Data usage througn the application</string>
    <string name="strength">Strength</string>
    <string name="server_details">Server Details</string>
    <string name="country">Country</string>
    <string name="speedtest">Speedtest</string>
    <string name="optimal_connect">Optimal Connect</string>
    <string name="you_secure">You are secure</string>
    <string name="secure">You are secure</string>
    <string name="not_secure">You are not secure</string>


    <string name="admob_app_id"></string> <!--This is your app id. Change the value with your admob one-->

    <string name="admob_banner_id"></string><!--This is your banner id. Change the value with your admob one-->
    <string name="admob_banner_id1"></string><!--This is your banner id. Change the value with your admob one-->
    <string name="admob_banner_id2"></string><!--This is your banner id. Change the value with your admob one-->

    <string name="admob_intersitial_id"></string><!--This is for your intersitial ad id. Change the value with your admob one-->
    <string name="admob_intersitial_id1"></string><!--This is for your intersitial ad id. Change the value with your admob one-->
    <string name="admob_intersitial_id2"></string><!--This is for your intersitial ad id. Change the value with your admob one-->

    <string name="admob_reward_add_1"></string><!--This is for your intersitial ad id. Change the value with your admob one-->

</resources>
