<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/serverParentLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_main"
    android:orientation="vertical"
    tools:context=".ui.activities.ServerActivity">

    <TextView
        android:id="@+id/serverPing"
        style="@style/serverName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:visibility="gone"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/serverSessions"
        style="@style/serverName"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="5dp"
        android:textSize="15sp" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/loadingAnimation"
        android:layout_width="match_parent"
        app:lottie_fileName="world.json"
        app:lottie_autoPlay="false"
        app:lottie_loop="true"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:visibility="gone"/>

    <LinearLayout
        android:id="@+id/banner_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/serverStatus"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:layout_marginBottom="71dp"
        android:orientation="vertical" />

    <!--
        <com.google.android.gms.ads.AdView
            xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/adViewBanner1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            ads:adSize="MEDIUM_RECTANGLE"
            ads:adUnitId="@string/admob_banner_id2" />
    -->
    <TextView
        android:id="@+id/serverStatus"
        android:layout_width="177dp"
        android:layout_height="32dp"
        android:layout_above="@id/serverStatusCard"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="19dp"
        android:layout_marginBottom="32dp"
        android:gravity="center"
        android:text="@string/connection_status"
        android:textColor="@android:color/white"
        android:textStyle="bold" />


    <android.support.v7.widget.CardView
        android:id="@+id/serverStatusCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/serverConnect"
        android:layout_alignParentStart="true"
        android:layout_marginStart="16sp"
        android:layout_marginEnd="16sp"
        app:cardCornerRadius="8sp"
        app:cardBackgroundColor="@color/colorPrimary"
        android:layout_marginBottom="16dp"
        android:elevation="6dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/serverFlag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/totalServers"
                    android:gravity="center"
                    android:padding="4dp"
                    android:text="@string/server_details" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="8sp">

                <TextView
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="start"
                    android:textColor="@color/totalServers"

                    android:text="Server IP" />

                <TextView
                    android:id="@+id/serverIP"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/totalServers"

                    android:layout_weight="1"
                    android:gravity="end"
                    android:text="@string/connection_status" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="8sp">

                <TextView
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/totalServers"

                    android:gravity="start"
                    android:text="@string/server_txt_speed" />

                <TextView
                    android:id="@+id/serverSpeed"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:layout_width="0dp"
                    android:textColor="@color/totalServers"

                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:text="@string/connection_status" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="8sp">

                <TextView
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="start"
                    android:textColor="@color/totalServers"

                    android:text="@string/server_txt_city" />

                <TextView
                    android:id="@+id/serverCity"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/totalServers"

                    android:gravity="end"
                    android:text="@string/connection_status" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="8sp">

                <TextView
                    style="@style/serverDetails"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="start"
                    android:textColor="@color/totalServers"

                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:text="@string/country" />

                <TextView
                    android:id="@+id/serverCountry"
                    style="@style/serverDetails"
                    android:layout_width="0dp"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:text="Name"
                    android:textColor="@color/totalServers"

                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"

                android:padding="8sp">

                <TextView
                    android:id="@+id/serverTrafficIn"
                    style="@style/serverDetails"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="start"
                    android:textSize="16sp"
                    android:textColor="@color/totalServers"

                    android:textStyle="bold"
                    android:text="@string/connection_status" />

                <TextView
                    android:id="@+id/serverTrafficOut"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:textColor="@color/totalServers"

                    android:text="@string/connection_status" />
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <ProgressBar
        android:id="@+id/serverConnectingProgress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:visibility="gone" />



    <Button
        android:id="@+id/serverConnect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginBottom="16dp"
        android:background="@drawable/connect_button_background"
        android:minWidth="180dp"
        android:minHeight="35dp"
        android:onClick="serverOnClick"
        android:padding="16dp"
        android:text="@string/server_btn_connect"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="16sp" />
</RelativeLayout>
